<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:background="@color/secondary"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:collapsedTitleTextColor="@color/secondary"
            app:expandedTitleTextColor="@color/secondary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageCharacter"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/background_shimmer" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:titleTextColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:fillViewport="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbars="vertical"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                tools:visibility="visible"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_01"
                android:backgroundTint="@color/grayWhite"
                android:layout_marginTop="@dimen/dimen_01"
                app:cardCornerRadius="@dimen/dimen_01"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleDescription"
                        android:layout_width="match_parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/description_title"
                        app:fontFamily="@font/montserrat"
                        android:contentDescription="@string/title_inspect_description"
                        android:importantForAccessibility="yes"
                        android:textSize="@dimen/text_dimen_01"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/dimen_01"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray"
                        android:contentDescription="@string/inpect_description_body"
                        android:importantForAccessibility="yes"
                        android:layout_margin="@dimen/dimen_01"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleDescription"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/hint_description" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimen_01"
                android:layout_marginHorizontal="@dimen/dimen_01"
                android:backgroundTint="@color/grayWhite"
                app:cardCornerRadius="@dimen/dimen_01"
                app:layout_constraintVertical_bias="0"
                android:layout_marginBottom="@dimen/dimen_01"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardInfo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/titleCommics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:fontFamily="@font/montserrat"
                        android:contentDescription="@string/comics_inspect"
                        android:importantForAccessibility="yes"
                        android:textSize="@dimen/text_dimen_01"
                        android:layout_marginTop="@dimen/dimen_01"
                        android:layout_marginStart="@dimen/dimen_01"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/title_commics" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_01"
                        android:orientation="vertical"
                        app:layout_constraintVertical_bias="0"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/titleCommics"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        tools:itemCount="15"
                        tools:listitem="@layout/detail_profile_item" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>